--- a/app/index.css
+++ b/app/index.css
@@ -1,3 +1,31 @@
+
+html, body, #app {
+  margin: 0;
+  height: 100%;
+  width: 100%;
+}
+
 body {
-  background: green;
+  background: #333333;
+}
+
+
+
+
+
+.container  > div {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  will-change: transform;
+}
+
+.container  > div > div {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  will-change: transform;
+  box-shadow: 0 62.5px 125px -25px rgba(50, 50, 73, 0.5), 0 37.5px 75px -37.5px rgba(0, 0, 0, 0.6);
 }
