--- a/app/components/index.css
+++ b/app/components/index.css
@@ -7,19 +7,21 @@
   display: grid;
   grid-gap: 10px;
   font-family: Arial, sans-serif;
-  grid-template-rows: 40px 150px 150px 40px;
+  grid-template-rows: 40px 150px 150px;
   grid-template-columns: 300px 600px;
+
+  background: #000000 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #00000029;
+  border: 1px solid #000000;
+  border-radius: 12px;
+  opacity: 1;
 }
 
 .playlist-header {
   grid-row: 1/2;
   grid-column: 1/3;
-
-}
-
-.playlist-controller {
-  grid-row: 3/4;
-  grid-column: 2/3;
+  color: #FFFFFF;
+  margin: 10px 10px;
 }
 
 .track-hero {
@@ -27,30 +29,47 @@
   grid-column: 1/2;
 }
 
-.track-info {
-  grid-row: 2/3;
-  grid-column: 2/3;
-}
-
 .track-image {
   max-width: 100%;
   width: 100%;
-  min-height: 248px;
-  max-height: 248px;
+  min-height: 300px;
+  max-height: 300px;
 }
 
+.track-info {
+  grid-row: 2/3;
+  grid-column: 2/3;
+  color: #FFFFFF;
+}
+
+.playlist-controller {
+  grid-row: 3/4;
+  grid-column: 2/3;
+
+}
+
+.playlist-button {
+  top: 468px;
+  left: 834px;
+  width: 232px;
+  height: 60px;
+  /* UI Properties */
+  background: #DD681F 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #00000029;
+  border-radius: 30px;
+  opacity: 1;
+}
 
 .container {
   position: fixed;
   overflow: hidden;
   width: 100%;
   height: 100%;
+  margin: 25px 40px;
 }
 
 .container  > div {
   position: absolute;
-  width: 100vw;
-  height: 100%;
   will-change: transform;
 }
 
